# Optical-Music-Recognition

./: CMakeLists.txt  README.md
src/: main.cpp
src/lib/: CMakeLists.txt
src/lib/grid/: CMakeLists.txt  grid.cpp  grid.h
src/lib/grid/test/: CMakeLists.txt  grid_test.cpp
src/lib/optical_music_recognition/: CMakeLists.txt  omr.cpp  omr.h
src/lib/optical_music_recognition/test/: CMakeLists.txt  omr_test.cpp
src/lib/region_of_interest/: CMakeLists.txt  region_of_interest.cpp  region_of_interest.h
src/lib/region_of_interest/test/: CMakeLists.txt  region_of_interest_test.cpp
src/lib/rle_parser/: CMakeLists.txt  rle_parser.cpp  rle_parser.h
src/lib/rle_parser/test/: CMakeLists.txt  rle_parser_test.cpp
src/lib/roi/: CMakeLists.txt  region_of_interest.cpp  region_of_interest.h
src/lib/roi/test/: region_of_interest_test.cpp
static/input_files/: README.md  in1.txt  in10.txt  in11.txt  in12.txt  in2.txt  in3.txt  in4.txt  in5.txt  in6.txt  in7.txt  in8.txt  in9.txt
utils/: CMakeLists.txt  ppm_utils.h
